# Bert-T5-GPT2

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
headlines/: common.py
headlines/bert/: config.py  dataset.py  run.py
headlines/gpt2/: config.py  utils.py
headlines/t5/: trainer.py
notebooks/: _bert.ipynb  _gpt2.ipynb  _t5.ipynb
src/headlines/bert/: metrics.py  model.py  run.py  trainer.py  utils.py
src/headlines/gpt2/: dataset.py  metrics.py  run.py  trainer.py
src/headlines/t5/: config.py  dataset.py  metrics.py  run.py  utils.py
tests/: test_common.py
tests/bert/: test_config.py  test_dataset.py  test_metrics.py  test_model.py  test_run.py  test_trainer.py  test_utils.py
tests/gpt2/: test_config.py  test_dataset.py  test_metrics.py  test_run.py  test_trainer.py  test_utils.py
tests/t5/: test_config.py  test_dataset.py  test_metrics.py  test_run.py  test_trainer.py  test_utils.py
